[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kimono"
version = "0.1.0"
description = "Deterministic, zero-LLM AI Agent Defense Layer against prompt injection and tool hijacking"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "malrobust", email = "malrobust@users.noreply.github.com"},
]
keywords = [
    "security",
    "ai-agents",
    "prompt-injection",
    "llm-security",
    "taint-tracking",
    "langgraph",
    "agent-defense",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/malrobust/KIMONO"
Repository = "https://github.com/malrobust/KIMONO.git"
Issues = "https://github.com/malrobust/KIMONO/issues"
Changelog = "https://github.com/malrobust/KIMONO/blob/main/CHANGELOG.md"

[project.optional-dependencies]
pdf = ["reportlab>=4.0"]
langgraph = ["langgraph>=0.0.1"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.1", "mypy>=1.0"]

[project.scripts]
kimono-fuzz = "kimono.cli:main"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]

[tool.coverage.run]
source = ["kimono"]
omit = ["kimono/integrations/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "N"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.setuptools.packages.find]
where = ["."]
include = ["kimono*"]

[tool.setuptools.package-data]
kimono = ["py.typed"]
